--- a/index.html
+++ b/index.html
@@ -1,13 +1,63 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<title> LInked Style Sheet</title>
-<link rel="stylesheet"href="style.css"type="text/css">
+<!DOCTYPE html>
+<html> 
+<head> 
+    <title> Beranda</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
-<body> 
-<hl> HTML5 and CSS3Web Plus
-Programmer's Mandatory Book</hl>
-<p> Jasakom publisher</p>
-<p> Jakarta</p>
+<body>
+    <div class="container">
+        <header>
+            <div class="logo">
+                Web ikan
+            </div>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Beranda</a></li>
+                <li><a href="kontak-saya.html">Kontak saya</a></li>
+                <li><a href="tentang-saya.html">Tentang saya</a></li>
+            </ul>
+        </nav>
+      <article>
+        <div class="konten">
+        <a href="penyu.html"><img src="img/penyu.jpeg"></a>
+        <div class="judul">
+            <a href="penyu.html">Penyu</a>
+        </div>
+       <p>Penyu adalah hewan yang banyak ditemukan bertelur di beberapa
+       pesisir pantai di Indonesia sejak dahulu.</p>
+       </div>
+       <div class="konten">
+           <a href="ikan-badut.html"><img src="img/ikan badut.jpeg" ></a>
+       <div class="judul">
+                <a href="ikan-badut.html">Ikan badut</a>
+        </div>
+       <p>Ikan badut ini dapat dikenali dengan warna jingga nya ikan ini tumbuh mencapai 
+        8 cm serta termasuk dalam  ikan terpopuler didunia. </p>
+        </div>
+        <div class="konten">
+            <a href="lion-fish.html"><img src="img/lion fish.jpeg"></a>
+            <div class="judul">
+                <a href="lion-fish.html">lion Fish</a>
+        </div>
+       <p>Lionfish atau volitans adalah ikan berbisa milik keluarga yang Scorpaenidae
+        terjemahan harfiah berarti ikan kalajengking. </p>
+        </div>
+        <div class="konten">
+         <a href="moorish-idol.html"><img src="img/moorish idol.jpeg"></a>
+         <div class="judul">
+                <a href="moorish-idol.html">Moorish idol</a>
+        </div>
+       <p>Ikan Moorish idol adalah salah satu ikan yang cukup populer dikalangan para 
+        hobiis ikan hias karena bentuknya yang unik dan pola warna nya yang menarik.</p>
+       </div>
+  </article>
+
+    <footer>
+        Copyright 2022 Teknik informatika
+    </footer>
+    </div>
 </body>
 </html>
